Commit all current changes

--- a/configs/suricata/suricata.yaml.tmpl
+++ b/configs/suricata/suricata.yaml.tmpl
@@ -3,14 +3,62 @@
 vars:
   address-groups:
     HOME_NET: "[192.168.0.0/16]"
+    EXTERNAL_NET: "!$HOME_NET"
+    SSH_SERVERS: "$HOME_NET"
+    HTTP_SERVERS: "$HOME_NET"
+    SQL_SERVERS: "$HOME_NET"
+
   port-groups:
-    HTTP_PORTS: "80"
+    SSH_PORTS: "22"
+    HTTP_PORTS: "80,8080,8000,8888,443"
+    SQL_PORTS: "5432"
+
+default-rule-path: /var/lib/suricata/rules
+rule-files:
+  - suricata.rules      # suricata-updateで取得したルール＋自作ルール
 
 default-log-dir: /var/log/suricata
+
 detection-engine:
   - ruleset: {{ ruleset | default('balanced') }}
+
+af-packet:
+  - interface: "{{ lookup('env','AZAZEL_WAN_IF') or 'wlan1' }}"
+    cluster-id: 99
+    cluster-type: cluster_flow
+    defrag: yes
+    use-mmap: yes
+    disable-promisc: no
+  - interface: eth0
+    cluster-id: 100
+    cluster-type: cluster_flow
+    defrag: yes
+    use-mmap: yes
+    disable-promisc: no
+
 outputs:
+  - fast:
+      enabled: yes
+      filename: /var/log/suricata/fast.log
+      append: yes
+
   - eve-log:
       enabled: yes
       filetype: regular
-      filename: eve.json
+      filename: /var/log/suricata/eve.json
+      types:
+        - alert:
+            tagged-packets: yes
+        - flow
+        - stats
+
+logging:
+  default-log-level: notice
+  outputs:
+    - file:
+        enabled: yes
+        level: info
+        filename: /var/log/suricata/suricata.log
+
+classification-file: /etc/suricata/classification.config
+reference-config-file: /etc/suricata/reference.config
