自動コミット: 作業中の変更を保存 (feature/suricata-automation)

--- a/configs/suricata/suricata.yaml.tmpl
+++ b/configs/suricata/suricata.yaml.tmpl
@@ -2,8 +2,8 @@
 ---
 vars:
   address-groups:
-    HOME_NET: "[192.168.0.0/16]"
-    EXTERNAL_NET: "!$HOME_NET"
+    HOME_NET: "[192.168.40.183/32]"
+    EXTERNAL_NET: "any"
     SSH_SERVERS: "$HOME_NET"
     HTTP_SERVERS: "$HOME_NET"
     SQL_SERVERS: "$HOME_NET"
